<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="card_title">netologia</string>
    <string name="card_time">21 may 18.36</string>
    <string name="netology_avatar">Netology avatar</string>
    <string name="button_options">Button options</string>
    <string name="placeholder_text">52</string>
    <string name="image_views">Image views</string>
    <string name="image_share">Image share</string>
    <string name="image_likes">Image likes</string>
    <string name="options_post_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="empty_content">Content can`t be empty</string>
    <string name="options_post_edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post" translatable="false">chooser_share_post</string>
    <string name="empty_content_error">Cannot create empty post</string>
    <string name="edit">Edit</string>
    <string name="video_title">Illustration in media. Invite to design-lecrure</string>
    <string name="video_views">8353 views</string>
    <string name="create">Create</string>
</resources>