<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/margin_sides"
        android:contentDescription="@string/netology_avatar"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="24dp"
        android:text="@string/card_title"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/margin_sides"
        android:text="@string/card_time"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_menu"
        style="@style/Widget.AppTheme.DefaultAppButton"
        android:layout_width="48dp"
        app:iconGravity="top"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_sides"
        android:contentDescription="@string/button_options"
        app:icon="@drawable/ic_three_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sides"
        android:autoLink="web"
        android:text="@string/greeting"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="8dp"
        android:checkable="true"
        android:contentDescription="@string/image_likes"
        app:icon="@drawable/ic_like_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/image_share"
        app:icon="@drawable/ic_share"
        tools:text="100"
        style="@style/Widget.AppTheme.DefaultAppButton"
        app:layout_constraintStart_toEndOf="@+id/btn_like"
        app:layout_constraintTop_toTopOf="@id/btn_like" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:icon="@drawable/ic_views"
        android:id="@+id/btn_views"
        android:clickable="false"
        style="@style/Widget.AppTheme.DefaultAppButton"
        android:contentDescription="@string/image_views"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="100"
        app:layout_constraintTop_toTopOf="@id/btn_share" />

</androidx.constraintlayout.widget.ConstraintLayout>